--- a/css/main.css
+++ b/css/main.css
@@ -117,6 +117,7 @@ a:link, a:visited {
     width: 100%;
     background-color: rgba(10, 25, 47, 0);
     backdrop-filter: blur(20px);
+    -webkit-backdrop-filter: blur(20px);
     z-index: 15;
     font-family: 'Montserrat', sans-serif;
 }
@@ -163,7 +164,7 @@ main {
 
 .hero h3 {
     font-size: clamp(10px, 5vw, 30px);
-    line-height: 0.5;
+    line-height: 1.1;
     letter-spacing: 0.02em;
 }
 
@@ -304,7 +305,7 @@ main {
 }
 
 @media (max-width: 992px) {
-    .hero p, .hero button {
+    .hero p, .hero button, .hero a {
         display: none;
     }
 
